Fields [FIX] Fixes bleeding props (my bad)

--- a/scss/core/elements/_input.checkbox.radio.scss
+++ b/scss/core/elements/_input.checkbox.radio.scss
@@ -107,7 +107,8 @@
 		}
 
 		#{$prefix}.field {
-			> label {
+			.radio.input ~ label,
+			.checkbox.input ~ label {
 				@extend %lui_input_label;
 				@extend %lui_input_label_displacable;
 				@extend %lui_input_label_displaced;
